Replace Stream#toList with Stream#collect